# clash-yaml-builder

./: .gitignore  ARCHITECTURE.md  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.4.md  ROADMAP.md  RULE_SOURCES.md  WINDOWS_EXE_PLAN.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: release.yml
docs/: effect-summary.html  implementation-overview.html
scripts/: build-tauri-windows.cmd  generate-brand-assets.ps1  generate-sparkle-sample.ts  inspect-msvc-env.cmd
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/application/: createProjectFromWizard.ts  explainProject.ts  projectPipeline.ts
src/core/: subscriptionConversion.ts
src/core/capabilities/: platformCapabilities.ts
src/core/model/: schema.ts  types.ts
src/core/normalization/: normalizeProject.ts
src/core/presets/: presetPacks.ts  regionPresets.ts
src/core/renderers/: clashMetaYaml.ts  index.ts  openclash.ts  shared.ts  sparkle.ts  windowsMihomo.ts
src/core/sources/: loyalsoldierSource.ts  metaRulesDat.ts
src/core/validation/: validateProject.ts
src/features/wizard/: cfwCoreDetector.ts  cfwSubscriptionService.ts  defaultWizardState.ts  export.ts  persistence.ts  processPicker.ts  routingTargets.ts  subscriptionResolver.ts  targetDefinitions.ts  types.ts
src/i18n/: messages.ts
