[package]
name = "clash-yaml-builder"
version = "0.2.3"
description = "Desktop shell for clash-yaml-builder"
authors = ["Robin"]
license = ""
repository = "https://github.com/robinzc2008/clash-yaml-builder"
edition = "2021"

[lib]
name = "clash_yaml_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tiny_http = "0.12"
urlencoding = "2.1"
vpn-link-serde = "0.1.5"
